--- a/account.html
+++ b/account.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Account | Kaya</title>
-  <link rel="icon" href="Kaya.png" type="image">
+  <link rel="icon" href="Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
@@ -11,6 +11,36 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="signup.css"> <!-- Reuse same layout -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="font.css">
+
+  <style>
+    body {
+      background-image: url('bg-2.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
+    main, footer {
+      background-color: #101C2C;
+      color: #fff;
+      text-align: center;
+      max-width: 100%;
+      overflow-x: hidden;
+    }
+    #button2 {
+      background-color: #101C2C;
+      color: #fff;
+    }
+    #button2:hover {
+      background-color: #B58E5A;
+      color: #fff;
+    }
+    #price {
+      color: #B58E5A;
+    }
+  </style>
+
 
 </head>
 <body>
@@ -28,11 +58,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="timeline.html">Timeline</a></li>
+          <li class="nav-item"><a class="nav-link" href="Pricing.html">Pricing</a></li>
         </ul>
       </div>
     </div>
