--- a/feedback.html
+++ b/feedback.html
@@ -3,26 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <title>Feedback | Kaya</title>
-  <link rel="icon" href="Kaya.png" type="image">
+  <link rel="icon" href="Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="font.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="signup.css">
+   <style>
+  body {
+    background-image: url('bg-2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+</style>
 </head>
 
 <body>
 <header>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="Kaya.png" alt="Kaya" width="50" height="50">
       </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+          <li class="nav-item"><a class="nav-link active" href="feedback.html">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+          <li class="nav-item"><a class="nav-link" href="account.html">Your Account
+          </a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 </header>
@@ -53,7 +76,7 @@
   <a href="index.html">
     <img src="Kaya.png" alt="Kaya Logo" width="100" height="100">
   </a>
-  <p>&copy; 2025 Kaya Botswana & YW-Designs</p>
+  <p>&copy; 2025 Kaya Botswana</p>
 </footer>
 
 <!-- Firebase Scripts -->
@@ -92,7 +115,7 @@
         createdAt: serverTimestamp()
       });
 
-      alert("✅ Feedback submitted successfully!");
+      alert("Recieved With Love! Thank you for your feedback.");
       feedbackForm.reset();
     } catch (error) {
       alert("❌ Error submitting feedback: " + error.message);
