--- a/recovery.html
+++ b/recovery.html
@@ -3,16 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Kaya | Recover Password</title>
-  <link rel="icon" href="Kaya.png" type="image">
+  <link rel="icon" href="Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="font.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="signup.css">
+   <style>
+  body {
+    background-image: url('bg-2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+</style>
 </head>
 
 <body>
@@ -51,7 +60,7 @@
   <a href="index.html">
     <img src="Kaya.png" alt="Kaya" width="100" height="100">
   </a>
-  <p>&copy; 2025 Kaya Botswana & YW-Designs</p>
+  <p>&copy; 2025 Kaya Botswana</p>
 </footer>
 
 <!-- Firebase JS -->
