--- a/test.html
+++ b/test.html
@@ -3,25 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Login | Kaya </title>
-  <link rel="icon" href="Kaya.jpg" type="image">
+  <link rel="icon" href="Kaya.png" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="font.css">
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="signup.css"> <!-- Reuse same layout -->
-  <style>
-  body {
-    background-image: url('bg-2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-</style>
 </head>
 
 <body>
@@ -38,10 +29,12 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-
+          <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="timeline.html">Timeline</a></li>
         </ul>
       </div>
     </div>
@@ -78,44 +71,40 @@
   <a href="index.html">
     <img src="Kaya.png" alt="Kaya Logo" width="100" height="100">
   </a>
-  <p>&copy; 2025 Kaya Botswana</p>
+  <p>&copy; 2025 Kaya Botswana & YW-Designs</p>
 </footer>
 
 <!-- Firebase & Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
-
-  const firebaseConfig = {
-    apiKey: "AIzaSyCB84FTOdVHbdMKSBLqKZ_YvZYl_QSVZek",
-    authDomain: "kahiyaco.firebaseapp.com",
-    projectId: "kahiyaco",
-    storageBucket: "kahiyaco.firebasestorage.app",
-    messagingSenderId: "1034759752393",
-    appId: "1:1034759752393:web:659872d47eef97c251db18",
-    measurementId: "G-ZB13WQQKGF"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  const loginForm = document.getElementById("loginForm");
-
-  loginForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    try {
-      await signInWithEmailAndPassword(auth, email, password);
-      window.location.href = "account.html";
-    } catch (error) {
-      alert("Login failed: " + error.message);
-    }
-  });
+<script src="auth.js"></script>
+<script>
+  const auth0 = await createAuth0Client({
+ domain: "dev-iahzbt8xjj0gs5t0.us.auth0.com",
+ client_id: "g4ZZoMa6MMZAhS3it4OF2pmwSVyogImn",
+ cacheLocation: 'localstorage' // optional, keeps user logged in
+});
+// Check login status
+if (window.location.search.includes("code=")) {
+ await auth0.handleRedirectCallback();
+ window.history.replaceState({}, document.title, "/");
+}
+const user = await auth0.getUser();
+if (user) {
+ document.getElementById("profile").textContent = JSON.stringify(user, null, 2);
+}
+// Login
+document.getElementById("login").onclick = () => {
+ auth0.loginWithRedirect({
+   redirect_uri: window.location.origin
+ });
+};
+// Logout
+document.getElementById("logout").onclick = () => {
+ auth0.logout({
+   returnTo: window.location.origin
+ });
+};
 </script>
 
 </body>
