--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="signup.css"> <!-- Reuse same layout -->
+  <link rel="stylesheet" href="signup.css"> 
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="font.css">
 
@@ -22,7 +22,6 @@
       background-position: center center;
     }
     main, footer {
-      background-color: #101C2C;
       color: #fff;
       text-align: center;
       max-width: 100%;
@@ -47,7 +46,7 @@
 
 <header>
   <!-- Nav Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="Kaya.png" alt="Kaya" width="50" height="50">
@@ -58,8 +57,12 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="Pricing.html">Pricing</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+          <li class="nav-item"><a class="nav-link active" href="account.html">Your Account
+          </a></li>
         </ul>
       </div>
     </div>
@@ -84,8 +87,8 @@
 
 <!-- Footer -->
 <footer>
-  <a href="index.html"><img src="Kaya.png" alt="KC LOGO" width="100" height="100"></a>
-  <p>&copy; 2025 Kaya & YW-Designs</p>
+  
+  <p>&copy; 2025 Kaya Botswana</p>
 </footer>
 
 <!-- Bootstrap JS -->
