--- a/login.html
+++ b/login.html
@@ -38,10 +38,12 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
           <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
           <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-
+          <li class="nav-item"><a class="nav-link" href="account.html">Your Account
+          </a></li>
         </ul>
       </div>
     </div>
@@ -75,48 +77,12 @@
 
 <!-- Footer -->
 <footer>
-  <a href="index.html">
-    <img src="Kaya.png" alt="Kaya Logo" width="100" height="100">
-  </a>
+  
   <p>&copy; 2025 Kaya Botswana</p>
 </footer>
+<!--Bootstrap JS-->
 
-<!-- Firebase & Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
-
-  const firebaseConfig = {
-    apiKey: "AIzaSyCB84FTOdVHbdMKSBLqKZ_YvZYl_QSVZek",
-    authDomain: "kahiyaco.firebaseapp.com",
-    projectId: "kahiyaco",
-    storageBucket: "kahiyaco.firebasestorage.app",
-    messagingSenderId: "1034759752393",
-    appId: "1:1034759752393:web:659872d47eef97c251db18",
-    measurementId: "G-ZB13WQQKGF"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  const loginForm = document.getElementById("loginForm");
-
-  loginForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    try {
-      await signInWithEmailAndPassword(auth, email, password);
-      window.location.href = "account.html";
-    } catch (error) {
-      alert("Login failed: " + error.message);
-    }
-  });
-</script>
-
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script type="module" src="scripts/login.js"></script>
 </body>
 </html>
