--- a/pricing.html
+++ b/pricing.html
@@ -12,12 +12,18 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <style> 
-  main, footer { background-color: #101C2C;
+  footer { background-color: #101C2C;
           color: #fff;
           text-align: Center;
           max-width: 100%;
           overflow-x: hidden;
           }
+  main {
+    color:#fff;
+    text-align: center;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
   #button2 { background-color: #101C2C;
             color: #fff;
             }
@@ -26,8 +32,6 @@
                   }
   #price { color: #B58E5A;
             }
-
-
   body {
     background-image: url('bg-2.jpg');
     background-size: cover;
@@ -39,6 +43,35 @@
     color: #B58E5A;
     font-weight: bold;
   }
+</style>
+
+<style>
+.package-card {
+  border: 2px solid #B58E5A;
+  border-radius: 16px;
+  background: rgba(16, 28, 44, 0.85);
+  padding: 32px 16px;
+  margin-bottom: 32px;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+}
+.package-card h2 {
+  font-family: 'Raleway', Arial, sans-serif;
+  font-weight: 700;
+  color: #fff;
+}
+.package-card p , #inquire{
+  font-family: 'Cormorant Garamond', serif;
+  color: #fff;
+}
+.package-card #price {
+  color: #B58E5A;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
 </style>
 
     <!-- Add inside <head> before your styles -->
@@ -76,6 +109,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current"page" href="pricing.html">Pricing</a>
         </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="account.html">Your Account</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -86,87 +122,123 @@
 
 
     <!-- Package Deals -->
+<!-- Replace your package section inside <main> with the following layout -->
+
 <div id="package">
   <div>
-<h1> Our Packages </h1>
-<p> These Packages Provide Sufficient Features For You.</p>
-</div>
+    <h1>Our Packages</h1>
+    <p>These Packages Provide Sufficient Features For You.</p>
+  </div>
+  <div class="container my-4">
+    <label for="currencySelector" class="form-label">Choose Currency:</label>
+    <select id="currencySelector" class="form-select" style="max-width: 200px; display: inline-block;">
+      <option value="BWP" selected>Botswana Pula (BWP)</option>
+      <option value="USD">US Dollar (USD)</option>
+      <option value="EUR">Euro (EUR)</option>
+      <option value="ZAR">South African Rand (ZAR)</option>
+    </select>
+  </div>
 
-<img src="launch.png" alt="Launch Pad" style="width: 35%; height: 75%;">
-      <h2>Launch Pad </h2>
-    <p><b> Perfect for startups or small businesses testing digital marketing.</b> <br> Basic SEO setup <br> Social media management (2 Platforms) <br> Simple Ad Campaign (1 Channel) <br> Montlhy analytics report</p>
-    <p id="price"> P1 900</p>
+  <!-- Package Cards -->
+  <div class="container">
+    <!-- Launch Pad -->
+    <div class="row justify-content-center align-items-center package-card mb-4">
+      <div class="col-md-7 col-12">
+        <h2>Launch Pad</h2>
+        <p><b>Perfect for startups or small businesses testing digital marketing.</b></p>
+        <p>Basic SEO setup<br>Social media management (2 Platforms)<br>Simple Ad Campaign (1 Channel)<br>Monthly analytics report</p>
+        <p id="price">P1 900</p>
+        <div class="d-grid gap-2 mt-2">
+  <a href="mailto:botswanakaya@gmail.com?subject=Launch Pad Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
+</div>
+      </div>
+      <div class="col-md-5 col-12 text-center">
+        <img src="launch.png" alt="Launch Pad" class="img-fluid" style="max-width: 80%; height: auto;">
+      </div>
     </div>
-    
-    <img src="growth.png" alt="Growth Engine" style="width: 35%; height: 75%;">
-      <h2> Growth Engine</h2>
-    <p> <b>Best for established businesses ready to scale.</b> </p>
-    <p>Advanced SEO + Content Strategy <br> Multi-Channel Ads (Meta & Google) <br> Email marketing automation <br> Bi-Weekly Strategy Calls <br> Competitor Analysis</p>
-    <p id="price"> P5 300</p>
+
+    <!-- Growth Engine -->
+    <div class="row justify-content-center align-items-center package-card mb-4">
+      <div class="col-md-7 col-12">
+        <h2>Growth Engine</h2>
+        <p><b>Best for established businesses ready to scale.</b></p>
+        <p>Advanced SEO + Content Strategy<br>Multi-Channel Ads (Meta & Google)<br>Email marketing automation<br>Bi-Weekly Strategy Calls<br>Competitor Analysis</p>
+        <p id="price">P5 300</p>
+        <div class="d-grid gap-2 mt-2">
+  <a href="mailto:botswanakaya@gmail.com?subject=Growth Engine Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
+</div>
+      </div>
+      <div class="col-md-5 col-12 text-center">
+        <img src="growth.png" alt="Growth Engine" class="img-fluid" style="max-width: 80%; height: auto;">
+      </div>
     </div>
-    
-    <img src="authority.jpg" alt="Authority Suite" style="width: 35%; height: 75%;">
-      <h2>Authority Suite</h2>
-    <p><b> Perfect for brands aiming to dominate their niche.</b></p>
-    <p> Full-Funnel marketing strategy <br> Dedicated Account manager <br> Premium ads (Meta, Google, LinkedIn, TikTok) <br> Conversion Rate optimization (CRO) <br> Weekly performance deep dives <br> influencer/PR collaborations</p>
-    <p id="price"> P2 800</p>
+
+    <!-- Authority Suite -->
+    <div class="row justify-content-center align-items-center package-card mb-4">
+      <div class="col-md-7 col-12">
+        <h2>Authority Suite</h2>
+        <p><b>Perfect for brands aiming to dominate their niche.</b></p>
+        <p>Full-Funnel marketing strategy<br>Dedicated Account manager<br>Premium ads (Meta, Google, LinkedIn, TikTok)<br>Conversion Rate optimization (CRO)<br>Weekly performance deep dives<br>Influencer/PR collaborations</p>
+        <p id="price">P2 800</p>
+        <div class="d-grid gap-2 mt-2">
+  <a href="mailto:botswanakaya@gmail.com?subject=Authority Suite Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
+</div>
+      </div>
+      <div class="col-md-5 col-12 text-center">
+        <img src="authority.jpg" alt="Authority Suite" class="img-fluid" style="max-width: 80%; height: auto;">
+      </div>
     </div>
   </div>
 </div>
+<script src="scripts/exchange.js"></script>
+
+<!-- Card -->
+
+<div id="popup-card" class="card" style="width: 14rem; display: none; position: fixed; bottom: 24px; right: 24px; z-index: 1050;">
+  <img src="assistant.jpg" class="card-img-top" alt="Kaya Assistant" style="max-height: 90px; object-fit: cover;">
+  <div class="card-body" style="padding: 0.75rem;">
+    <button type="button" class="btn-close" aria-label="Close" onclick="dismissCard(this)" style="float: right;"></button>
+    <h6 class="card-title" style="font-size: 1rem;">Feedback?</h6>
+    <p class="card-text" style="font-size: 0.95rem;">Good day, I'm Kaya. Here to listen to your thoughts on us.</p>
+    <a href="feedback.html" class="btn btn-primary btn-sm">Talk To Us</a>
+  </div>
 </div>
+<style>
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+#popup-card {
+  /* Already positioned fixed, bottom left */
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+}
+</style>
 
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const popupCard = document.getElementById("popup-card");
+  // Show the card
+  popupCard.style.display = "block";
+  // Set a timeout to hide the card after 10 seconds
+  setTimeout(() => {
+    popupCard.style.animation = "fadeOut 0.5s ease-in-out";
+    popupCard.addEventListener("animationend", () => {
+      popupCard.style.display = "none";
+      popupCard.style.animation = "";
+    }, { once: true });
+  }, 10000); // 10 seconds
+});
 
-<script type="module">
-  // Import Firebase modules
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-analytics.js";
-
-  // Your Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyCB84FTOdVHbdMKSBLqKZ_YvZYl_QSVZek",
-    authDomain: "kahiyaco.firebaseapp.com",
-    projectId: "kahiyaco",
-    storageBucket: "kahiyaco.firebasestorage.app",
-    messagingSenderId: "1034759752393",
-    appId: "1:1034759752393:web:659872d47eef97c251db18",
-    measurementId: "G-ZB13WQQKGF"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-  const analytics = getAnalytics(app);
-
-  // Handle form submission
-  document.getElementById("customPackageForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const email = document.getElementById("email").value;
-    const businessName = document.getElementById("businessName").value;
-    const services = [];
-
-    document.querySelectorAll("input[type=checkbox]:checked").forEach((checkbox) => {
-      services.push(checkbox.value);
-    });
-
-    try {
-      await addDoc(collection(db, "custom_packages"), {
-        email,
-        businessName,
-        services,
-        createdAt: new Date()
-      });
-
-      alert("Package submitted successfully!");
-      document.getElementById("customPackageForm").reset();
-    } catch (error) {
-      console.error("Error saving to Firestore:", error);
-      alert("Failed to submit package. Please try again.");
-    }
-  });
+// Dismiss card manually with the "Close" button
+function dismissCard(button) {
+  const card = button.closest(".card");
+  card.style.animation = "fadeOut 0.5s ease-in-out";
+  card.addEventListener("animationend", () => {
+    card.style.display = "none";
+    card.style.animation = "";
+  }, { once: true });
+}
 </script>
-  
 <!-- Page End -->
 </main>
      <!--Bootstrap JS-->
@@ -177,8 +249,8 @@
 
 <!-- Footer -->
 <footer>
-<p> <b> Email </b>: botswanakaya@gmail.com <br> <b>Number </b>: (+267) 74 733 518</p>
-  
+
+  <a href="#"><i class="fas fa-arrow-up"></i></a>
   <p>&copy; 2025 Kaya Botswana</p>
 </footer>
 
