--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/index.css">
+  <style>
+   body {
+    background-image: url('images/bg-2.jpg') !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+  }
+
+    </style>
 </head>
 
 <body>
