--- a/pricing.html
+++ b/pricing.html
@@ -11,11 +11,18 @@
 <!-- BootStrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="css/pricing.css">  
-
     <!-- Add inside <head> before your styles -->
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/font.css">
+<style>
+   body {
+    background-image: url('images/bg-2.jpg') !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+  }
+</style>
+<link rel="stylesheet" href="css/pricing.css">  
 
 <title>Kaya | Pricing </title>
 <link rel="icon" href="images/Kaya.jpg" type="image">
