--- a/pricing.html
+++ b/pricing.html
@@ -27,7 +27,7 @@
 <title>Kaya | Pricing </title>
 <link rel="icon" href="images/Kaya.jpg" type="image">
 </head>
-
+<body>
 <header> 
      <!-- Nav Bar -->
 
@@ -199,5 +199,5 @@ function dismissCard(button) {
   <a href="#"><i class="fas fa-arrow-up"></i></a>
   <p>&copy; 2025 Kaya Botswana</p>
 </footer>
-
+</body> 
 <html>
