--- a/pricing.html
+++ b/pricing.html
@@ -93,7 +93,7 @@
         <h2>Launch Pad</h2>
         <p><b>Perfect for startups or small businesses testing digital marketing.</b></p>
         <p>Basic SEO setup<br>Social media management (2 Platforms)<br>Simple Ad Campaign (1 Channel)<br>Monthly analytics report</p>
-        <p id="price">P1 900</p>
+        <p id="price">P810</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Launch Pad Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
 </div>
@@ -109,7 +109,7 @@
         <h2>Growth Engine</h2>
         <p><b>Best for established businesses ready to scale.</b></p>
         <p>Advanced SEO + Content Strategy<br>Multi-Channel Ads (Meta & Google)<br>Email marketing automation<br>Bi-Weekly Strategy Calls<br>Competitor Analysis</p>
-        <p id="price">P5 300</p>
+        <p id="price">P3191.50</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Growth Engine Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
 </div>
@@ -125,7 +125,7 @@
         <h2>Authority Suite</h2>
         <p><b>Perfect for brands aiming to dominate their niche.</b></p>
         <p>Full-Funnel marketing strategy<br>Dedicated Account manager<br>Premium ads (Meta, Google, LinkedIn, TikTok)<br>Conversion Rate optimization (CRO)<br>Weekly performance deep dives<br>Influencer/PR collaborations</p>
-        <p id="price">P2 800</p>
+        <p id="price">P6 040</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Authority Suite Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
 </div>
