--- a/pricing.html
+++ b/pricing.html
@@ -92,7 +92,7 @@
       <div class="col-md-7 col-12">
         <h2>Launch Pad</h2>
         <p><b>Perfect for startups or small businesses testing digital marketing.</b></p>
-        <p>Basic SEO setup<br>Social media management (2 Platforms)<br>Simple Ad Campaign (1 Channel)<br>Monthly analytics report</p>
+        <p>Monthly Analytics Report<br>Social Media Management & Setup (2 Platforms)<br>1 Monthly Ad Campaign On Social Platforms <br>8 Posts A Month (2 Platforms)</p>
         <p id="price">P810</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Launch Pad Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
@@ -108,7 +108,7 @@
       <div class="col-md-7 col-12">
         <h2>Growth Engine</h2>
         <p><b>Best for established businesses ready to scale.</b></p>
-        <p>Advanced SEO + Content Strategy<br>Multi-Channel Ads (Meta & Google)<br>Email marketing automation<br>Bi-Weekly Strategy Calls<br>Competitor Analysis</p>
+        <p>Email Marketing<br>Landing Page Optimization<br>Competitor & Audience Analysis<br>PR Management<br>Website Development & Maintenance<br>Weekly Ad Campaigns</p>
         <p id="price">P3191.50</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Growth Engine Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
@@ -124,7 +124,7 @@
       <div class="col-md-7 col-12">
         <h2>Authority Suite</h2>
         <p><b>Perfect for brands aiming to dominate their niche.</b></p>
-        <p>Full-Funnel marketing strategy<br>Dedicated Account manager<br>Premium ads (Meta, Google, LinkedIn, TikTok)<br>Conversion Rate optimization (CRO)<br>Weekly performance deep dives<br>Influencer/PR collaborations</p>
+        <p>Influence Collaboration<br>Custom Marketing Funnel<br>Conversion Rate optimization (CRO)<br>Weekly Analytics Report<br>PR Management<br>Dedicated Account Manager<br>Competitor & Audience Analysis<br>Website Development<br>Email Marketing<br> SEO Setup<br>Weekly Ad Campaigns (Facebook/Instagram)</p>
         <p id="price">P6 040</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Authority Suite Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
