--- a/account.html
+++ b/account.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Account | Kaya</title>
+  <title>Your Account | Kaya</title>
   <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
