--- a/pricing.html
+++ b/pricing.html
@@ -92,7 +92,7 @@
       <div class="col-md-7 col-12">
         <h2>Launch Pad</h2>
         <p><b>Perfect for startups or small businesses testing digital marketing.</b></p>
-        <p>Monthly Analytics Report<br>Social Media Management & Setup (Facebook & Instagram)<br>1 Monthly Ad Campaign On Social Platforms <br>8 Posts A Month (2 Platforms)</p>
+        <p>Monthly Analytics Report<br>Social Media Management & Setup (Facebook & Instagram)<br>1 Monthly Ad Campaign On Social Media Platforms <br>8 Posts A Month (2 Platforms)</p>
         <p id="price">P810</p>
         <div class="d-grid gap-2 mt-2">
   <a href="mailto:botswanakaya@gmail.com?subject=Launch Pad Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
