added SEO & exchanges

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Kaya Botswana is a leading digital marketing agency offering expert strategies, insights, and solutions to help your business grow online." />
+  <meta name="keywords" content="Digital Marketing, Botswana, SEO, Social Media, Branding, Newsletter, Kaya" />
+  <meta name="author" content="Kaya Botswana" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <meta property="og:title" content="Kaya Botswana | Digital Marketing Agency" />
+  <meta property="og:description" content="Subscribe to our newsletter for the latest digital marketing insights and strategies." />
+  <meta property="og:image" content="images/Kaya.png" />
+  <meta property="og:url" content="https://kayabw.org/" />
+  <meta property="og:type" content="website" />
+
+  
   <title>Kaya | Home</title>
   <link rel="icon" href="images/Kaya.jpg" type="image">
   
