--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,16 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explore Kaya Botswana's digital marketing packages. Find the perfect plan for your business, from startups to established brands. Transparent pricing and expert solutions." />
+  <meta name="keywords" content="Digital Marketing, Pricing, Packages, Botswana, SEO, Social Media, Kaya" />
+  <meta name="author" content="Kaya Botswana" />
+<meta property="og:title" content="Kaya Botswana | Digital Marketing Packages & Pricing" />
+  <meta property="og:description" content="Discover affordable digital marketing packages for every business size. Transparent pricing from Kaya Botswana." />
+  <meta property="og:image" content="images/Kaya.png" />
+  <meta property="og:url" content="https://kayabw.org/pricing.html" />
+  <meta property="og:type" content="website" />
+
 
      <!-- Other head elements -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
