feat: Add contact links and icons to the footer across pages and update its styling.

--- a/index.html
+++ b/index.html
@@ -141,8 +141,20 @@
   <script type="module" src="scripts/newsletter.js"></script>
   <!-- Footer -->
   <footer class="text-center py-4">
-
-    <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
+    <div class="container">
+      <div class="footer-contact mb-3">
+        <a href="https://wa.me/26778276071" target="_blank" class="mx-3 text-white text-decoration-none">
+          <i class="fab fa-whatsapp text-success me-2"></i>+267 78 276 071
+        </a>
+        <a href="mailto:botswanakaya@gmail.com" class="mx-3 text-white text-decoration-none">
+          <i class="fas fa-envelope text-orange me-2"></i>botswanakaya@gmail.com
+        </a>
+        <a href="https://instagram.com/kaya.botswana" target="_blank" class="mx-3 text-white text-decoration-none">
+          <i class="fab fa-instagram text-danger me-2"></i>@kaya.botswana
+        </a>
+      </div>
+      <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
+    </div>
   </footer>
 
   <!-- Bootstrap JS -->
