--- a/account.html
+++ b/account.html
@@ -78,9 +78,21 @@
   </div>
 
   <!-- Footer -->
-  <footer>
-
-    <p>&copy; 2025 Kaya Botswana</p>
+  <footer class="text-center py-4">
+    <div class="container">
+      <div class="footer-contact mb-3">
+        <a href="https://wa.me/26778276071" target="_blank" class="mx-3 text-white text-decoration-none">
+          <i class="fab fa-whatsapp text-success me-2"></i>+267 78 276 071
+        </a>
+        <a href="mailto:botswanakaya@gmail.com" class="mx-3 text-white text-decoration-none">
+          <i class="fas fa-envelope text-orange me-2"></i>botswanakaya@gmail.com
+        </a>
+        <a href="https://instagram.com/kaya.botswana" target="_blank" class="mx-3 text-white text-decoration-none">
+          <i class="fab fa-instagram text-danger me-2"></i>@kaya.botswana
+        </a>
+      </div>
+      <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
+    </div>
   </footer>
 
   <!-- Bootstrap JS -->
